Actualización: contenido footer index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <footer class="footer">
 	<p class="footer__texto">
-	Desarrollado por: Ing. Brayan Díaz / Año 2024
+	Desarrollado por: Ing. Brayan Arturo Díaz / Año 2024
 	</p>
 </footer>
 
