--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header class="header">
 	<nav class="header__menu">
 		<a class="header__menu__logo" href="./index.html"><img src="./assets/alura.png" alt=""></a>
+        <a class="header__menu__texto" href="">Encriptador de texto</a>
 	</nav>
     
     </header>
@@ -19,7 +20,12 @@
     <main class="container"> <!--Clase para contener todo el doc-->
         <div class="container__contenido">
             <div class="container__section__inputUser">
-                <textarea placeholder="Digite el texto a encriptar..." id="textoUsuario" class="container__section__texto__input"></textarea>  
+                    <div class="container__section__inputUser_pegar">
+                        <textarea placeholder="Digite el texto a encriptar..." id="textoUsuario" class="container__section__texto__input"></textarea>     
+                        <button onclick="pegarTexto()" class="__textarea_pegar_button" id="pegar" disabled>
+                            <img src="./assets/pegar1.png" id="img__button_pegar" alt=""><p class="texto__button__pegar">Pegar</p>
+                        </button>
+                    </div>
                 <p class="container__texto_informativo"><img src="./assets/informativo1.png" alt="">Para encriptar: Ingresa solo letras minúsculas y sin acentos</p>
                 <div class="container__section__inputUser__botones">    
                     <button onclick="validarYEncriptar()" class="container__section__boton" id="encriptar">
@@ -58,6 +64,7 @@
 	<p class="footer__texto">
 	Desarrollado por: Ing. Brayan Arturo Díaz / Año 2024
 	</p>
+    
 </footer>
 
 </html>
