Add: botones footer, diseño hover

--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
     </body>
 
 <footer class="footer">
-	<p class="footer__texto">
-	Desarrollado por: Ing. Brayan Arturo Díaz / Año 2024
-	</p>
-    
+	    <p class="footer__contenedor__texto">
+	    Desarrollado por: Ing. Brayan Arturo Díaz / Año 2024
+	    </p>
+        <div class="footer__contenedor">
+                <a href="https://github.com/BrayanDiaz89" target="_blank"><img src="./assets/git1.png" class="footer__contenedor__logo" alt="logo github"></a>
+                <a href="https://www.linkedin.com/in/brayan-diaz-dvlp/" target="_blank"><img src="./assets/linkedin1.png" class="footer__contenedor__logo" alt="logo linkedin"></a>
+        </div>
+
 </footer>
 
 </html>
