Actualizaciones: habilitar botón desencriptar inicio app. styles: cursor:pointer a botones.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button onclick="validarYEncriptar()" class="container__section__boton" id="encriptar">
                     Encriptar
                     </button>
-                    <button onclick="desencriptarYMostrar()" class="container__section__boton" id="desencriptar" disabled>
+                    <button onclick="desencriptarYMostrar()" class="container__section__boton" id="desencriptar">
                     Desencriptar
                     </button>
 	            <button onclick="limpiarTextarea()" class="container__section__boton" id="limpiar">
