Actualización index: implementaçión semántica al index.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="Author" content="Brayan Díaz" />
+        <meta name="keywords" content="HTML, CSS, JavaScript" />
+        <meta name="description" content="Encripta y desencripta un texto, programa desarrollado con html5, css y javascript" />
+        <!--<meta name="copyright" content="Copyright encriptador.com"> No poseo un dominio, por lo que no tendría copyright-->
+        <meta name="robots" content="index, follow" />
         <link rel="stylesheet" href="./styles/style.css">
         <title>CryptoVault</title>
         <link rel="icon" href="./assets/logo_page.png" type="image/x-icon">
